styles.css
/*Body Level Styling*/
body {
	font-family: 'Raleway', sans-serif;
}

::-webkit-scrollbar { 
    display: none; 
}

main {
	display: flex;
	flex-direction: column;
}

/*Image Carousel Styling*/
.photo-banner {
  background: url(https://cdn-images-1.medium.com/max/2000/1*YKimas0edyaIlMtIj28jdQ.jpeg), url(https://i.ytimg.com/vi/xVVHqaqjBy8/maxresdefault.jpg), url(https://i.ytimg.com/vi/hFrWS4kmNik/maxresdefault.jpg);
  width: 100%;
  height: 40vh;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: 50% 0%;
  position: relative;
  display: flex;
}

.photo-banner .fa-chevron-circle-left {
	position: absolute;
	left: 1%;
	top: 50%;
	color: white;
	opacity: 0.5;
}

.photo-banner .fa-chevron-circle-left:hover {
	color: white;
	opacity: 1;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-webkit-box-shadow: 0px 0px 30px 0px #FFFFFF;
	-moz-box-shadow:    0px 0px 30px 0px #FFFFFF;
	box-shadow:         0px 0px 30px 0px #FFFFFF;
}

.photo-banner .fa-chevron-circle-right {
	position: absolute;
	right: 1%;
	top: 50%;
	color: white;
	opacity: 0.5;
}

.photo-banner .fa-chevron-circle-right:hover {
	opacity: 1;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	-webkit-box-shadow: 0px 0px 30px 0px #FFFFFF;
	-moz-box-shadow:    0px 0px 30px 0px #FFFFFF;
	box-shadow:         0px 0px 30px 0px #FFFFFF;
}

.dots {
	font-size: 10px;
	position: absolute;
	left: 45%;
	bottom: 5%;
	color: white;
	opacity: 0.5;
}

/*Tile Styling*/
section h1 {
	font-weight: 800;
}

button {
	font-family: 'Raleway', sans-serif;
	border: #FFFFFF 1px solid;
	background-color: transparent;
	padding: 0.75em;
	-webkit-appearance: none;
  -webkit-border-radius: 0px;
  display: -webkit-flex;
	color: #FFFFFF;
	display: inline;
	font-size: 15px;
}

button:focus {
	outline: none !important;
}

button:hover {
	opacity: 1;
	-webkit-border-radius: 0px;
	-moz-border-radius: 0px;
	border-radius: 0px;
	-webkit-box-shadow: 0px 0px 30px 0px #FFFFFF;
	-moz-box-shadow:    0px 0px 30px 0px #FFFFFF;
	box-shadow:         0px 0px 30px 0px #FFFFFF;
}

a {
	text-decoration: none;
	color: black;
}

.tile-container {
	display: flex;
	flex-wrap: wrap;
	flex-direction: row;
	justify-content: center;
}

.tile {
	flex-wrap: wrap;
	flex-grow: 1;
	width: 49.37%;
  height: 20vh;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: #FFFFFF;
  display: flex;
}

.tile a {
	color: #FFFFFF;
	flex-direction: column;
}

.icon-tiles i:hover {
	text-shadow:0 0 1em #FFFFFF;
}

.bio-tile {
	flex-direction: column;
	justify-content: space-around;
	background-color: #132362;
	width: 100%;
	padding: 1em;
	display: flex;
}

.josh-bio {
	align-content: flex-start;
	line-height: 150%;
}

.josh-bio h1 {
	padding-bottom: 15px;
}

.button-group {
	justify-content: space-between;
}

.tile-2 {
	background-color: #3583be;
}

.tile-3 {
	background-color: #4b5a79;
}

.tile-4 {
	background-color: #1d1c29;
}

.tile-5 {
	background-color: #3583be;
}

.tile-6 {
	background-color: #132362;;
}

.tile-7 {
	background-color: #4b5a79;;
}

.tile-8 {
	background-color: #1d1c29;
	flex-grow: 2;
}

@media screen and (min-width: 610px) {
	.photo-banner {
  	background: url(https://i.ytimg.com/vi/xVVHqaqjBy8/maxresdefault.jpg);
		background-size: cover;
  	background-repeat: no-repeat;
  	background-position: 50% 20%;
	}

	.photo-banner .fa-chevron-circle-right {
		font-size: 20px;
	}

	.photo-banner .fa-chevron-circle-left {
		font-size: 20px;
	}

	.josh-bio {
		align-content: flex-start;
		line-height: 150%;
	}

	.josh-bio h1 {
		padding-bottom: 15px;
	}

}

@media screen and (min-width: 960px) {
	main {
		display: flex;
		flex-direction: row-reverse;
	}

	.photo-banner {
  	background: url(https://i.ytimg.com/vi/hFrWS4kmNik/maxresdefault.jpg);
		background-size: cover;
  	background-repeat: no-repeat;
  	background-position: 50% 0%;
  	height: 100vh;
	}

	.photo-carousel {
		width: 40%;
	}

	.photo-banner {
		height: 102vh;
	}

	.photo-banner .fa-chevron-circle-right {
		font-size: 30px;
	}

	.photo-banner .fa-chevron-circle-left {
		font-size: 30px;
	}

	.tile-container {
		width: 60%;
		height: 100vh;
	}

	.dots {
		font-size: 15px;
		/*position: absolute;
		right: -50%;*/
		top: 5%;
		color: black;
		opacity: 0.5;
	}

	.tile {
		height: 34%;
   	width: 33.33%;
	}

	.bio-tile {
		width: 66.66%;
		padding: 0;
	}

	.tile-2 {
		background-color: #1d1c29;
	}

	.josh-bio {
		align-content: flex-start;
		padding: 35px;
		line-height: 150%;
	}

	.josh-bio h1 {
		padding-bottom: 15px;
	}
}

